Robot captures black screen

XMLWordPrintable

    • 2d
    • b80
    • generic
    • linux

        Testsuite name: AWT

        JDK/JRE tested: 1.8.0_b88 (32/64 bits)
        OS/architecture: Ubuntu 12.04 x64
        Reproducible: Always
        Reproducible on machine: aeremeev-ru
        Is it a Regression: No
        Is it a platform specific issue: Yes

        Robot captures a part of screen which differs from set in createScreenCapture on Ubuntu 12.04 if you have more than one screen devices.
        If displays are duplicated, test passes. But if displays are extended, test fails.
        To reproduce use attached test.

          1. Frame0
            0.2 kB
          2. Frame1
            0.4 kB
          3. TwoScreenCaptureTest.java
            2 kB

              Assignee:
              Alexander Zvegintsev
              Reporter:
              Andrei Eremeev
              Votes:
              0 Vote for this issue
              Watchers:
              10 Start watching this issue

                Created:
                Updated:
                Resolved: