8014212: Robot captures black screen

Reviewed-by: alexsch, serb